# src/routes/estabelecimentosRoutes.js
@@ -4,11 +4,13 @@ const router = express.Router();
 
 
 router.get("/todos", controller.getAll);
-router.get("/", controller.findEstabelecimentoByBairro);
+router.get("/bairro", controller.findEstabelecimentoByBairro);
 router.get("/", controller.findEstabelecimentoByNome);
-router.get("/", controller.findEstabelecimentoByAcessivel);
+router.get("/filtro", controller.findEstabelecimentoByAcessivel);
+router.get("/kids", controller.findEstabelecimentoByKidsFriendly);
 router.post("/", controller.postEstabelecimento);
-router.delete("/:id", controller.deleteEstabalecimento)
+router.post("/login", controller.login);
+router.delete("/:id", controller.deleteEstabalecimento);
 router.patch("/:id", controller.updateEstabalecimento )
 
 module.exports = router;
